[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/TitleScreen.gd" type="Script" id=1]

[node name="TitleScreen" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 467.0
margin_top = 269.0
margin_right = 557.0
margin_bottom = 331.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 90.0
margin_bottom = 14.0
text = "Necrobotanist"

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 90.0
margin_bottom = 38.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 90.0
margin_bottom = 62.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
